# COMA

./: .asdf-plugins  .docker-env-dev.sample  .docker-env-prod.sample  .editorconfig  .env.sample  .gitignore  .tool-versions  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  flake.nix  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 132f51734616_make_solution_a_string.py  54d9cfe74362_cascade_delete_on_submission.py  598fdd03f7d7_don_t_hash_password.py  6d355da65557_create_team_table.py  c2f40405b103_add_admin_column_to_team_table.py  d334603ee080_create_question_table.py  dbb90e86e357_add_accuracy_to_question.py  e2f97e2039ae_add_submissions_table.py
app/: main.py
app/api/: deps.py  models.py  routes.py  utils.py
app/core/: config.py  db.py  render_md.py  render_utils.py
app/mock/: 2024_questions.sql
app/static/css/: admin.css  footer.css  home.css  leaderboard.css  main.css  navbar.css  question_admin.css  team_admin.css
app/templates/: admin.html  base.html  footer.html  home.html  leaderboard.html  login.html  navbar.html  question_admin.html  question_form.html  question_show.html  questions_pdf.html  team_admin.html  team_new.html  team_show.html
app/templates/pages/: admin.html  admin_question.html  admin_question_create.html  admin_question_form.html  admin_question_update.html  admin_team.html  admin_team_create.html  home.html  (+7 more)
pandoc-filters/: math2svg.lua
pandoc-lua-filters/: math2svg.lua
scripts/: format.sh  run_dev.sh
(+3 files in other folders)
