[project]
name = "coma"
version = "0.1.0"
description = "computational mathematics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.121.3",
    "jinja2>=3.1.6",
    "pandoc>=2.4",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
    "sqlmodel>=0.0.27",
]
